<resources>
    <string name="app_name">Final Project</string>
    <string name="match">Match</string>
    <string name="teams">Teams</string>
    <string name="favorites">Favorites</string>
    <string name="Lorem">Lorem ip Sum</string>
    <string name="goals_detail">Goals</string>
    <string name="shoots_detail">Shoots</string>
    <string name="line_up_detail">LINEUPS</string>
    <string name="goal_keeper">Goal Keeper</string>
    <string name="defense">Defense</string>
    <string name="midfield">MidField</string>
    <string name="forward">Forward</string>
    <string name="substitutes">Substitutes</string>
    <string name="titleDetail">Detail</string>
    <string name="height">HEIGHT</string>
    <string name="weight">WEIGHT</string>
    <string name="added">Added to Favorite</string>
    <string name="removed">Removed to Favorite</string>
    <string name="search">Search here..</string>
    <string name="intent_type_calendar">vnd.android.cursor.item/event</string>
    <array name="league">
        <item>English Premier League</item>
        <item>English League Championship</item>
        <item>German Bundesliga</item>
        <item>Italian Serie A</item>
        <item>French Ligue 1</item>
        <item>Spanish La Liga</item>
    </array>
    <string-array name="id_league">
        <item>4328</item>
        <item>4329</item>
        <item>4331</item>
        <item>4332</item>
        <item>4334</item>
        <item>4335</item>
    </string-array>
</resources>
